; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_AudioTrack.c_J4AC_android_media_AudioTrack__getPlaybackRate.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_AudioTrack.c_J4AC_android_media_AudioTrack__getPlaybackRate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__**, i32, i32)* }

@class_J4AC_android_media_AudioTrack = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @J4AC_android_media_AudioTrack__getPlaybackRate(%struct.TYPE_5__** %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__**, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i32 (%struct.TYPE_5__**, i32, i32)*, i32 (%struct.TYPE_5__**, i32, i32)** %7, align 8
  %9 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @class_J4AC_android_media_AudioTrack, i32 0, i32 0), align 4
  %12 = call i32 %8(%struct.TYPE_5__** %9, i32 %10, i32 %11)
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
